<resources>
    <string name="app_name">TCS Scouting Application</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_about">About Scout Report</string>
    <string name="about_header">Scout Report</string>
    <string name="about_detail">This iasd a adfadf adfadfaf  asdf dfa f asdf a df afdafadfadf fa f faadfasdfaf ffadfaf fafdaf adf fafaffdfdf f faf fa f adf af adf  afafadfdfa fafasfdafdf fadf f fd adfadfadfdfdf fa f f asdfaffdfdf</string>
    <string name="action_about">About</string>
    <string name="title_activity_team_detail">Team Details</string>
    <string name="action_create_item">Add</string>
    <string name="action_save_item">Save</string>
    <string name="action_edit_item">Edit</string>
    <string name="action_delete_item">Delete</string>
    <string name="action_undo_item">Undo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">DetailActivity</string>
</resources>
