<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.tcsrobotics.myapplication.MainActivity">
    <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_about"
            android:orderInCategory="101"
            android:title="@string/action_about"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_add_team"
            android:orderInCategory="102"
            android:title="@string/action_create_item"
            app:showAsAction="always"
            android:icon="@drawable/ic_action_add"
    />

    <!--
    <item
            android:id="@+id/action_edit_team"
            android:orderInCategory="106"
            android:title="@string/action_save_item"
            app:showAsAction="always"
            android:icon="@drawable/ic_action_edit"
    />
    <item
            android:id="@+id/action_delete_team"
            android:orderInCategory="106"
            android:title="@string/action_delete_item"
            app:showAsAction="always"
            android:icon="@drawable/ic_action_delete"
    />
    -->
</menu>
